alteração de códigos de resposta e documentação
